tests/rosetta/out/Smalltalk/99-bottles-of-beer.out
/workspace/mochi/tests/rosetta/out/Smalltalk/99-bottles-of-beer.st:11: parse error, expected '|' or identifier
